style.css
@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap');

:root {
  --background: #ffffff;
  --nav: #c3d9c3;
  --interact: seagreen;
  --title: #008080;
  --subtitle: #4B0082;
  --text: #333333;
}

* {
  margin: 0;
  padding: 0;
  font-family: 'Dongle';
  scroll-behavior: smooth;  
}

body {
  background-color: var(--background);
}

/* Navbar */
nav {
  display: flex;
  position: fixed;
  width: 100%;
  list-style: none;
  align-items: center;
  padding: 0.5rem 0;
  background-color: var(--nav);
  box-shadow: 0px 0px 3px black;
  z-index: 9999;
  transition: all ease-in 0.3s;
}

nav * {
  text-decoration: none;
  white-space: nowrap;
  outline: none;
}

nav #nav-title a:focus-visible {
  border-left: 2px solid var(--interact);
  border-right: 2px solid var(--interact);
}

nav #nav-options li a:focus-visible {
  border: 2px solid var(--interact);
}

#nav-title {
  position: relative;
  top: 3px;
  cursor: pointer;
  font-size: 3rem;
  margin-right: auto;
  margin-left: 10%;
  overflow: hidden;
}

#nav-title a {
  color: var(--title);
}

#nav-title:hover::after {
  left: 0;
}

#nav-title::after {
  display: block;
  content: '';
  height: 2px;
  background-color: var(--subtitle);
  position: relative;
  top: -25px;
  left: -185px;
  transition: left ease-in 0.2s;
}

#nav-dropdown {
  display: none;
  position: absolute;
  top: 25%;
  right: 10%;
}

#nav-dropdown i {
  cursor: pointer;
  color: var(--subtitle);
  font-size: 1.5rem;
}

#nav-dropdown i:hover {
  color: var(--interact);
}

#nav-dropdown i.fa-times {
  display: none;
  position: relative;
  top: -21px;
  right: 2px;
}

#nav-options {
  display: flex;
  position: relative;
  font-size: 1.75rem;
  margin-right: 10%;
  padding: 1rem 0;
  transition: padding ease-in 0.2s;
  animation: slideIn forwards ease-in 0.3s;
}

@keyframes slideIn {
  from {
    right: -500px;
  } to {
    right: 0px;
  }
}

#nav-options li a {
  color: var(--text);
  background-color: var(--background);
  padding: 0.75rem;
}

#nav-options li:first-child > a {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  padding-left: 1.25rem;
}

#nav-options li:last-child > a {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  padding-right: 1.25rem;
}

#nav-options li:hover a {
  color: var(--interact);
}

/* Modal backdrop */
#modal-backdrop {
  content: '';
  background-color: rgba(0, 0, 0, 0.8);
  width: 100vw;
  height: 100vh;
  display: none;
  position: fixed;
  z-index: 999;
}

#modal-backdrop #project-close-btn {
  cursor: pointer;
  position: fixed;
  top: 55%;
  right: 5%;
  width: 48px;
  height: 48px;
  border-radius: 5px;
  outline: none;
  border: 2px solid var(--interact);
  background-color: var(--nav);
  color: var(--text);
  overflow: hidden;
}

#modal-backdrop #project-close-btn i {
  font-size: 2.5rem;
}

#project-site-btn {
  display: none;
  cursor: pointer;
  position: fixed;
  top: 50%;
  right: 5%;
  border-radius: 5px;
  outline: none;
  padding: 0 1rem;
  border: 2px solid var(--interact);
  font-size: 2rem;
  background-color: var(--nav);
  color: var(--text);
}

#modal-backdrop #project-close-btn:hover, #project-site-btn:hover {
  background-color: var(--interact);
}

#project-embed {
  display: none;
  margin: 10% auto 0;
  width: 400px;
  height: 400px;
}

/* Sections */
.section {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--text);
  background-color: var(--background);
  padding: 5rem 15% 0;
}

.section h1 {
  font-size: 3rem;
  color: var(--subtitle);
  margin-bottom: -1rem;
  padding-bottom: 1rem;
  white-space: nowrap;
}

.section h2 {
  font-size: 2.3rem;
  text-align: center;
}

.section p {
  font-size: 2rem;
  text-align: center;
}

/* Intro section */
#intro.section {
  padding-top: 6.5rem;
}

#intro img {
  position: relative;
  top: -50px;
  height: 192px; /* 192px */
  width: 192px; /* 192px */
  margin: 20px 0;
  background-color: var(--background);
  border-radius: 10px;
  /* box-shadow: 2px 2px 3px var(--text); */ /* Uncomment out when I have an actual candid photo */
}

/* Remove all below in intro section once I have replacement image */
#intro h2, #intro p {
  z-index: 3;
}

#intro #cover-up {
  position: relative;
  top: -270px;
  left: 70px;
  display: block;
  background-color: var(--background);
  height: 50px;
  width: 50px;
  z-index: 2;
  margin-bottom: -150px;
}

#intro #let {
  position: absolute;
  font-size: 2rem;
  color: red;
  z-index: 1;
  transform: rotate(-45deg);
  top: 45px;
  left: -110px;
}

#intro #him {
  position: absolute;
  top: 75px;
  left: 75px;
  transform: rotate(90deg);
}

/* Projects section */
.projects-container {
  --num-cols: 3;
  box-sizing: border-box;
  display: grid;
  gap: 1.5rem;
  grid-template-columns: repeat(var(--num-cols),1fr);
  overflow: hidden;
  padding: 1rem;
}

.project {
  position: relative;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  border-radius: 20px;
  border: 2px solid black;
  height: 256px;
  width: 256px;
}

.project label {
  position: absolute;
  text-align: center;
  text-indent: -50px;
  color: var(--nav);
  background-color: var(--title);
  width: 80%;
  font-size: 1.5rem;
  transform: rotate(-26deg);
  top: 11px;
  left: -36px;
  padding: 0px 25px;
}

.project img {
  background-color: var(--nav);
  object-fit: cover;
  width: 256px;
  height: 186px;
}

/* Styling for SkyAware Anywhere project image */
#skyaware {
  background: var(--nav) url('assets/images/skyaware.svg') repeat-y center;
  background-size: 200px;
}

.project button {
  font-size: 1.5rem;
  position: absolute;
  cursor: pointer;
  width: 100%;
  border: none;
  background-color: var(--text);
  color: var(--background);
}

.project button:hover {
  background-color: var(--interact);
}

.project button.details {
  bottom: 0px;
}

.project button.view {
  bottom: 34px;
  border-top: 1px solid var(--nav);
  border-bottom: 1px solid var(--nav);
}

/* About Me section */
#about.section h2 {
  position: relative;
  top: 30px;
  left: -50%;
  transform: rotate(-20deg);
  margin-bottom: 2.5rem;
}

#about.section h2::after {
  content: '';
  display: block;
  position: relative;
  top: -12px;
  height: 3px;
  background-color: var(--title);
}

#about.section h2#experience {
  left: -24%;
}

#about.section .logo {
  margin: -1rem 0 1rem;
  width: 100px;
}

.section h3 {
  font-size: 2.3rem;
  cursor: pointer;
}

.section h3::before, .section h3::after {
  display: inline-block;
  position: relative;
  color: var(--interact);
  transition: all ease-in 0.2s;
}

.section h3::before {
  content: '>';
  right: 20px;
}

.section h3::after {
  content: '<';
  left: 20px;
}

.section h3:hover {
  color: var(--interact);
}

.section h3:hover::before {
  right: 10px;
  color: var(--text);
}

.section h3:hover::after {
  left: 10px;
  color: var(--text);
}

.work-container {
  position: relative;
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 70%;
  overflow: hidden;
}

.work-container .we-details {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  top: -500px;
  border-bottom: 2px solid var(--title);
  transition: top ease-in 0.3s;
}

.work-container h3 {
  transition: all ease-in 0.3s;
  z-index: 2;
}

.work-container img {
  display: none;
  position: relative;
  top: -200px;
  width: 150px;
  padding: 0.5rem;
}

.work-container p {
  display: none;
  position: relative;
}

.we-open .we-details {
  top: 0px;
}

.we-open h3::before {
  transform: rotate(90deg);
  top: -2px;
  right: 20px !important;
}

.we-open h3::after {
  transform: rotate(-90deg);
  top: -2px;
  left: 20px !important;
}

.we-open p {
  display: block;
  top: 0px;
}

.we-open a {
  color: var(--text);
  text-decoration: underline var(--subtitle);
}

.we-open a:hover {
  color: var(--interact);
}

.we-open img {
  display: inline;
  top: 0px;
}

/* Contact section */
#contact.section {
  padding: 10vh 10vh 5vh;
  min-height: 0px;
}

#ct-icons {
  display: flex;
  gap: 1rem;
}

#ct-icons i {
  font-size: 2rem;
  color: var(--title);
  text-shadow: 1px 1px 1px var(--subtitle);
}

#ct-icons i:hover {
  color: var(--interact);
}

#footer {
  display: flex;
  justify-content: center;
  font-size: 1.5rem;
  width: min-content;
  margin: 1rem auto 0;
  padding: 1rem;
  color: var(--text);
  border-top: 2px solid var(--nav);
}

#footer p {
  width: 35vw;
  text-align: center;
}

#footer a {
  color: var(--text);
  font-weight: bold;
  text-decoration: underline solid var(--subtitle);
  white-space: nowrap;
}

#footer a:hover {
  cursor: pointer;
  color: var(--interact);
}

/* Media queries */
@media screen and (max-width: 1024px) {
  .projects-container {
    --num-cols: 2;
  }
}

@media screen and (max-width: 700px) {
  nav {
    flex-direction: column;
    padding: 1rem 0;
  }

  #nav-title {
    height: 45px;
    margin: -20px 0 -5px;
    font-size: 2.5rem;
  }

  #nav-title::after {
    top: -20px;
  }

  #nav-options {
    display: flex;
    margin: 0px;
    padding: 1.7rem 0 0.7rem;
  }

  #nav-options li a {
    font-size: 1.8rem;
    padding: 0.8rem;
  }

  #intro.section {
    padding-top: 9rem;
  }

  .section h2, .section p {
    line-height: 2.3rem;
  }

  #footer p {
    line-height: 1.3rem;
    width: 50vw;
  }
}

@media screen and (max-width: 640px) {
  .projects-container {
    --num-cols: 1;
  }

  .section {
    padding: 15vh 7.5% 0;
  }

  #about.section h2 {
    left: -45%;
  }

  #about.section h2#experience {
    left: -24%;
  }
}

@media screen and (max-width: 480px) {
  #nav-title {
    margin: -20px auto -5px 10%;
  }

  #nav-dropdown {
    display: block;
  }

  #nav-options {
    display: none;
  }

  #intro.section {
    padding-top: 4rem;
  }

  #about.section h2 {
    left: -36%;
  }

  #about.section h2#experience {
    left: -28%;
  }

  #about.section .logo {
    width: 70px;
  }
}

